APPs/motioneye/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
    kubernetes.io/metadata.name: motioneye
  name: motioneye
spec: {}
