APPs/motioneye/k8s/motioneye-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motioneye-nodeport-service
  namespace: motioneye  
  labels:
    app: motioneye
spec:
  type: NodePort
  ports:
    - port: 8765
      nodePort: 31180
  selector:
    app: motioneye

---

apiVersion: v1
kind: Service
metadata:
  name: motioneye-http-service
  namespace: motioneye  
spec:
  selector:
    app: motioneye
  ports:
  - name: http
    protocol: TCP
    port: 8765
    targetPort: 8765
